--- a/css/styles.css
+++ b/css/styles.css
@@ -612,6 +612,7 @@ font-family: 'Arial', sans-serif;
         height: 100%; /* Ensures the container fills the available space */
         justify-content: center;
         padding: 20px;
+        align-items: stretch;
         margin-top: 120px; /* Add this line to push it below the fixed header */
     }
 
@@ -662,6 +663,7 @@ font-family: 'Arial', sans-serif;
     width: 250px;
     min-height: 100vh;
     color: white;
+    height: auto;
   }
   
   .sidebar ul {
@@ -1131,14 +1133,17 @@ font-family: 'Arial', sans-serif;
 /*------------End of Business Page Elements------------*/
 /* --- Government Page Specific Styling --- */
 
-.government-page-wrapper {
+.main-container {
   display: flex;
-  margin-top: 140px;
+  justify-content: center;
+  align-items: stretch;
+  margin-top: 120px;
+  padding: 20px;
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 20px;
 }
+
 
 .government-page-sidebar {
   background-color: #003366;
@@ -1147,6 +1152,7 @@ font-family: 'Arial', sans-serif;
   min-height: calc(100vh - 140px);
   color: white;
   border-radius: 12px;
+  height:auto
 }
 
 .government-page-sidebar ul {
@@ -1200,7 +1206,7 @@ font-family: 'Arial', sans-serif;
 .government-hero-overlay-card {
   position: absolute;
   bottom: 30px;
-  right: 26%;
+  right: 5%;
   background: white;
   padding: 30px;
   border-radius: 12px;
